--- a/Il2CppInterop.Common/Il2CppInterop.Common.csproj
+++ b/Il2CppInterop.Common/Il2CppInterop.Common.csproj
@@ -1,16 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>BepInEx, knah et al.</Authors>
     <Description>Common API for Il2CppInterop packages</Description>
     <RootNamespace>Il2CppInterop.Common</RootNamespace>
+    <RestoreSources>https://nuget.samboy.dev/v3/index.json;$(RestoreSources)</RestoreSources>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Iced" Version="1.17.0"/>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1"/>
-    <PackageReference Include="System.Net.Http" Version="4.3.4"/>
+    <PackageReference Include="Disarm" Version="2022.1.0-master.70" />
+    <PackageReference Include="Iced" Version="1.17.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
   </ItemGroup>
 
 </Project>
