--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -37,17 +37,13 @@ jobs:
           path: ./bin/zip/*.zip
           name: Il2CppInterop
 
-      - name: Push to NuGet
+      - name: Push to GitHub Packages
         if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v')
         run: |
-          if [ "${GITHUB_REF#refs/tags/v}" != "$GITHUB_REF" ]; then
-            push_source="https://api.nuget.org/v3/index.json"
-            push_api_key="${{ secrets.NUGET_ORG_KEY }}"
-          else
-            push_source="${{ secrets.BEPIN_DEV_NUGET_SOURCE }}"
-            push_api_key="${{ secrets.BEPIN_DEV_NUGET_KEY }}"
-          fi
-          dotnet nuget push --skip-duplicate -s "$push_source" -k "$push_api_key" ./bin/NuGet/*.nupkg
+          dotnet nuget push ./bin/NuGet/*.nupkg \
+            --skip-duplicate \
+            --api-key ${{ secrets.GITHUB_TOKEN }} \
+            --source "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json"
 
       - name: Publish a release
         uses: softprops/action-gh-release@v2
