Mark package versions as ARM64

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,7 +25,7 @@ jobs:
           if [ "${GITHUB_REF#refs/tags/v}" != "$GITHUB_REF" ]; then
             echo "version=${GITHUB_REF#refs/tags/v}" >> "$GITHUB_OUTPUT"
           else
-            echo "build_tag=ci.${GITHUB_RUN_NUMBER}" >> "$GITHUB_OUTPUT"
+            echo "build_tag=ci.${GITHUB_RUN_NUMBER}-arm64" >> "$GITHUB_OUTPUT"
           fi
 
       - name: Build
