--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -37,13 +37,13 @@ jobs:
           path: ./bin/zip/*.zip
           name: Il2CppInterop
 
-      - name: Push to GitHub Packages
+      - name: Push to NuGet
         if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v')
         run: |
           dotnet nuget push ./bin/NuGet/*.nupkg \
             --skip-duplicate \
-            --api-key ${{ secrets.GITHUB_TOKEN }} \
-            --source "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json"
+            --api-key ${{ secrets.NUGET_TOKEN }} \
+            --source "https://nuget.trev.app/v3/index.json"
 
       - name: Publish a release
         uses: softprops/action-gh-release@v2
